--- a/RoadSense.Api/appsettings.json
+++ b/RoadSense.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=RoadSenseDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
